 

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
 
    <TextView
        android:id="@+id/loginlabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#1F7C07"
        android:text="@string/quesionpost"
                
        />
     <TextView
        android:id="@+id/relatedquestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/YourQuestion" />
    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/custom"
        android:drawSelectorOnTop="true" />
     <TextView
        android:id="@+id/questionlabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Enterquestion" />

     <EditText
         android:id="@+id/questionfield"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/custom"
         android:ems="10"
         android:focusable="true"
         android:singleLine="false" />
    
    <Button
        android:id="@+id/Post"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:background="#0000FF"
        android:gravity="center"
         android:layout_marginTop="5dp"
        android:text="@string/PostQuestion"
        android:textColor="#FFFFFF" />
    <TextView
        android:id="@+id/answerlist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="#1F7C07"
        android:text="@string/answerlist" />

    
    <ListView
android:id="@+id/listview"
android:layout_width="wrap_content"
android:layout_height="wrap_content" />
 
</LinearLayout>
