<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/loginlabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
       
        
        android:layout_marginTop="21dp"
        android:text="@string/Signup" />

    <TextView
        android:id="@+id/usernamelabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       
        
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/loginlabel"
        android:layout_marginTop="20dp"
        android:text="@string/YourName" />

    <EditText
        android:id="@+id/loginid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/usernamelabel"
        android:layout_alignBottom="@+id/usernamelabel"
        android:layout_alignLeft="@+id/emailid"
        android:layout_alignParentRight="true"
       
        android:background="@drawable/custom"
        android:ems="10"
        android:inputType="text"
  
        android:singleLine="true" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/Emaillabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
       
        android:layout_below="@+id/loginid"
       
        android:layout_marginTop="49dp"
        android:text="@string/LoginEmail" />

    <EditText
        android:id="@+id/emailid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/Emaillabel"
        android:layout_alignBottom="@+id/Emaillabel"
        android:layout_alignParentRight="true"
        android:background="@drawable/custom"
       
        android:ems="10"
        android:inputType="textEmailAddress"
    
        android:singleLine="true" />

    <TextView
        android:id="@+id/passwordlabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/Emaillabel"
       
        
        android:layout_marginTop="49dp"
        android:text="@string/LoginPassword" />

    <EditText
        android:id="@+id/loginpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/passwordlabel"
        android:layout_alignBottom="@+id/passwordlabel"
        android:layout_alignLeft="@+id/emailid"
        android:background="@drawable/custom"
        android:ems="10"
       
        android:inputType="textPassword"
    
        android:singleLine="true" />

    <TextView
        android:id="@+id/knowledge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
       
        android:layout_below="@+id/passwordlabel"
        android:layout_marginTop="49dp"
       
        android:text="@string/KnowledgeArea" />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/knowledge"
        android:layout_alignBottom="@+id/knowledge"
        android:layout_alignLeft="@+id/loginpassword"
        android:layout_alignParentRight="true"
       
        android:background="@drawable/custom"
    
        android:drawSelectorOnTop="true" />

    <TextView
        android:id="@+id/SecurityQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/knowledge"
        android:layout_marginTop="49dp"
       
        
        android:text="@string/SecurityQuestion" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/SecurityQuestion"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/SecurityQuestion"
        android:background="@drawable/custom"
       
    
        android:drawSelectorOnTop="true" />

    <Button
        android:id="@+id/signup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:background="#0000FF"
       
        android:gravity="center"
        android:paddingLeft="10dp"
        android:text="@string/SignUp"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/SecurityAnswer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       android:layout_above="@+id/signup"
        android:layout_alignRight="@+id/usernamelabel"
        android:layout_marginBottom="20dp"
        android:text="@string/SecurityAnswer" />

    <EditText
        android:id="@+id/answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/SecurityAnswer"
        android:layout_alignBottom="@+id/SecurityAnswer"
        android:layout_alignParentRight="true"
        android:background="@drawable/custom"
        android:ems="10"
        android:inputType="text"
         android:singleLine="true" />

</RelativeLayout>
